--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,8 @@
 name: pdf_price_compare
-description: Compare Deku Deals PDF exports (USD vs MXN) on-device
+description: Compare Deku Deals PDF exports (USD vs MXN) on‑device
 publish_to: "none"
 version: 1.0.0+1
+
 environment:
   sdk: ">=3.4.0 <4.0.0"
 
@@ -9,7 +10,7 @@ dependencies:
   flutter:
     sdk: flutter
   file_picker: ^10.2.0
-  path_provider: ^2.1.2
+  path_provider: ^2.1.3
   syncfusion_flutter_pdf: ^30.1.38
   syncfusion_flutter_xlsio: ^30.1.38
   csv: ^6.0.0
@@ -18,7 +19,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^6.0.0
+  flutter_lints: ^4.0.0
 
 flutter:
   uses-material-design: true
